# fasjson-hs

./: fasjson.cabal  stack.yaml
app/: Main.hs
src/: FASJSON.hs
